Remove commons-io, avoid data conversions